--- a/clevertec-plugin-file-image/build.gradle
+++ b/clevertec-plugin-file-image/build.gradle
@@ -1,36 +1,72 @@
+//plugins {
+//    id 'java-gradle-plugin'
+//    id 'maven-publish'
+//    id 'com.gradle.plugin-publish' version '0.19.0'
+//}
+//
+//group = 'ru.clevertec'
+//version = '1.0'
+//
+//gradlePlugin {
+//    plugins {
+//        pluginFileImage {
+//            id = 'java.plugin.MyPlugin.java'
+//            displayName = 'pluginFileImage'
+//            description = 'The plugin can download an image from the internet'
+//            implementationClass = 'plugin.MyPlugin'
+//        }
+//    }
+//}
+//
+//pluginBundle {
+//    website = 'https://clevertec.ru/'
+//    vcsUrl = 'https://github.com/ARTURITPRO/mal-gradle.git'
+//    tags = ['clevertec', 'download', 'image']
+//}
+//
+//publishing {
+//    repositories {
+//        mavenLocal()
+//    }
+//}
+//dependencies {
+//    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+//}
+
+
+
+
+
+
+
+buildscript {
+    repositories {
+        mavenLocal()
+    }
+    dependencies {
+        classpath 'ru.clevertec:clevertec-plugin-file-image:1.0'
+    }
+}
 plugins {
+// Apply the Java Gradle plugin development plugin to add support for developing Gradle plugins
     id 'java-gradle-plugin'
     id 'maven-publish'
     id 'com.gradle.plugin-publish' version '0.19.0'
 }
 
-group = 'ru.clevertec'
-version = '1.0'
-
-gradlePlugin {
-    plugins {
-        pluginFileImage {
-            id = 'ru.clevertec.pluginFileImage'
-            displayName = 'pluginFileImage'
-            description = 'The plugin can download an image from the internet'
-            implementationClass = 'ru.clevertec.plugin.MyPlugin'
-        }
-    }
+plugins {
+    id 'java'
 }
 
-pluginBundle {
-    website = 'https://clevertec.ru/'
-    vcsUrl = 'https://github.com/ARTURITPRO/mal-gradle.git'
-    tags = ['clevertec', 'download', 'image']
-}
+apply plugin: 'java.plugin.MyPlugin.java'
 
-publishing {
+group 'ru.clevertec'
+version '1.0'
+
+subprojects {
     repositories {
+        mavenCentral()
         mavenLocal()
     }
 }
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
-}
-
