--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,4 +7,5 @@ version '1.0'
 
 dependencies {
     implementation group: 'ru.clevertec', name: 'utils', version: '1.3.5'
+    implementation project(path: ':utils')
 }
